force-app/main/default/objects/Contract_Product_Services__c/Contract_Product_Services__c.object-meta.xml
<CustomObject>
    <label>Contracted Product / Service</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracted Products / Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>