force-app/main/default/objects/Contract_Product_Services__c/fields/Contracted_Price__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Price__c</fullName>
    <label>Contracted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>