force-app/main/default/objects/Contract_Product_Services__c/fields/Eval_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Eval_End_Date__c</fullName>
    <inlineHelpText>Specify the Date for the end of the Eval or the end of the Contract.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>