force-app/main/default/objects/Contract_Product_Services__c/fields/Ext_Maint_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Ext_Maint_Exp_Date__c</fullName>
    <label>Ext. Maint. Exp. Date</label>
    <type>Date</type>
</CustomField>