force-app/main/default/objects/Contract_Product_Services__c/fields/Extended_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Extended_Maintenance__c</fullName>
    <label>Extended Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>