force-app/main/default/objects/Contract_Product_Services__c/fields/Host_Platform__c.field-meta.xml
<CustomField>
    <fullName>Host_Platform__c</fullName>
    <label>Host Platform</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Services__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>400 Thin Client</fullName>
            </value>
            <value>
                <fullName>Contracted Testing</fullName>
            </value>
            <value>
                <fullName>Customer to Customer</fullName>
            </value>
            <value>
                <fullName>ESA</fullName>
            </value>
            <value>
                <fullName>LAN</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>System to System</fullName>
            </value>
            <value>
                <fullName>Unix</fullName>
            </value>
            <value>
                <fullName>UNV</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Win</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>