force-app/main/default/objects/Contract_Product_Services__c/fields/Mobile_Platform__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Platform__c</fullName>
    <inlineHelpText>Contracted products and services should be what the customer has in their contract or have signed up for via IQ for applications. The list per customer should include all hardware and the prices for it plus software and applications.</inlineHelpText>
    <label>Mobile Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>GlobalTRACS</fullName>
            </value>
            <value>
                <fullName>Handheld</fullName>
            </value>
            <value>
                <fullName>Host Software</fullName>
            </value>
            <value>
                <fullName>MCP100S</fullName>
            </value>
            <value>
                <fullName>MCP100T</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>OmniExpress</fullName>
            </value>
            <value>
                <fullName>OmniTRACS</fullName>
            </value>
            <value>
                <fullName>PIT</fullName>
            </value>
            <value>
                <fullName>SFM</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>TrailerTRACS</fullName>
            </value>
            <value>
                <fullName>TT210</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>