force-app/main/default/objects/Contract_Product_Services__c/fields/Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>Platform_Type__c</fullName>
    <label>Platform/Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mobile_Platform__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>IMCT</fullName>
            </value>
            <value>
                <fullName>IMCT-IGPS</fullName>
            </value>
            <value>
                <fullName>IMCT-ME</fullName>
            </value>
            <value>
                <fullName>IMCT-ME/IGPS</fullName>
            </value>
            <value>
                <fullName>MCT</fullName>
            </value>
            <value>
                <fullName>Portable-TCU1</fullName>
            </value>
            <value>
                <fullName>Portable-TCU2</fullName>
            </value>
            <value>
                <fullName>Refurb (IMCT)</fullName>
            </value>
            <value>
                <fullName>Refurb (IMCT-IGPS)</fullName>
            </value>
            <value>
                <fullName>Refurb (IMCT-ME/IGPS)</fullName>
            </value>
            <value>
                <fullName>Refurb (IMCT-ME)</fullName>
            </value>
            <value>
                <fullName>Refurb (MCT)</fullName>
            </value>
            <value>
                <fullName>TCU1</fullName>
            </value>
            <value>
                <fullName>TCU2</fullName>
            </value>
            <value>
                <fullName>T2MA20P</fullName>
            </value>
            <value>
                <fullName>T2MA21P</fullName>
            </value>
            <value>
                <fullName>T2MA22P</fullName>
            </value>
            <value>
                <fullName>T2MA23P</fullName>
            </value>
            <value>
                <fullName>T2MA24P</fullName>
            </value>
            <value>
                <fullName>T2MA25P</fullName>
            </value>
            <value>
                <fullName>T2MA28P</fullName>
            </value>
            <value>
                <fullName>T2MA31P</fullName>
            </value>
            <value>
                <fullName>T2MA32P</fullName>
            </value>
            <value>
                <fullName>T2MA33P</fullName>
            </value>
            <value>
                <fullName>T2MA34P</fullName>
            </value>
            <value>
                <fullName>T2MA35P</fullName>
            </value>
            <value>
                <fullName>T2MA36P</fullName>
            </value>
            <value>
                <fullName>T2MA37P</fullName>
            </value>
            <value>
                <fullName>T2MA38P</fullName>
            </value>
            <value>
                <fullName>T2MA39P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>