force-app/main/default/objects/Contract_Product_Services__c/fields/Replacement_Program__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Program__c</fullName>
    <label>Replacement Program</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mobile_Platform__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>