force-app/main/default/objects/Contract_Product_Services__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mobile_Platform__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alarm Clock</fullName>
            </value>
            <value>
                <fullName>Amber Alert</fullName>
            </value>
            <value>
                <fullName>Analytics Manager</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Automated Arrival &amp; Departure</fullName>
            </value>
            <value>
                <fullName>Aux Sensor</fullName>
            </value>
            <value>
                <fullName>BluMASS</fullName>
            </value>
            <value>
                <fullName>BOT/EOT</fullName>
            </value>
            <value>
                <fullName>CabCard</fullName>
            </value>
            <value>
                <fullName>Cargo Sensor</fullName>
            </value>
            <value>
                <fullName>Cargo Theft Alert</fullName>
            </value>
            <value>
                <fullName>Content Delivery</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>CSA Safety Performance</fullName>
            </value>
            <value>
                <fullName>DataView</fullName>
            </value>
            <value>
                <fullName>Door Sensor</fullName>
            </value>
            <value>
                <fullName>Driver Email</fullName>
            </value>
            <value>
                <fullName>Driver Login</fullName>
            </value>
            <value>
                <fullName>Driver Notification Service</fullName>
            </value>
            <value>
                <fullName>Driver Workflow</fullName>
            </value>
            <value>
                <fullName>DTTS</fullName>
            </value>
            <value>
                <fullName>FleetAdvisor</fullName>
            </value>
            <value>
                <fullName>Hard Braking</fullName>
            </value>
            <value>
                <fullName>Hours of Service</fullName>
            </value>
            <value>
                <fullName>In-Cab Scanning</fullName>
            </value>
            <value>
                <fullName>JTRACS</fullName>
            </value>
            <value>
                <fullName>Lease Asset</fullName>
            </value>
            <value>
                <fullName>Mapping</fullName>
            </value>
            <value>
                <fullName>Nav-ALK</fullName>
            </value>
            <value>
                <fullName>Nav - InCab Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>