force-app/main/default/objects/Contract_Product_Services__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Eval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>