force-app/main/default/objects/Contract_Product_Services__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Services__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
            <value>
                <fullName>2.1</fullName>
            </value>
            <value>
                <fullName>2.2</fullName>
            </value>
            <value>
                <fullName>2.3</fullName>
            </value>
            <value>
                <fullName>2.4</fullName>
            </value>
            <value>
                <fullName>2.5</fullName>
            </value>
            <value>
                <fullName>2.6</fullName>
            </value>
            <value>
                <fullName>2.7</fullName>
            </value>
            <value>
                <fullName>3.0</fullName>
            </value>
            <value>
                <fullName>3.1</fullName>
            </value>
            <value>
                <fullName>3.2</fullName>
            </value>
            <value>
                <fullName>3.3</fullName>
            </value>
            <value>
                <fullName>4.0</fullName>
            </value>
            <value>
                <fullName>4.1</fullName>
            </value>
            <value>
                <fullName>4.2</fullName>
            </value>
            <value>
                <fullName>4.3</fullName>
            </value>
            <value>
                <fullName>5.0</fullName>
            </value>
            <value>
                <fullName>5.1</fullName>
            </value>
            <value>
                <fullName>5.2</fullName>
            </value>
            <value>
                <fullName>5.3</fullName>
            </value>
            <value>
                <fullName>6.0</fullName>
            </value>
            <value>
                <fullName>6.1</fullName>
            </value>
            <value>
                <fullName>6.2</fullName>
            </value>
            <value>
                <fullName>6.2.2</fullName>
            </value>
            <value>
                <fullName>7.0</fullName>
            </value>
            <value>
                <fullName>7.2</fullName>
            </value>
            <value>
                <fullName>7.5.2CAN</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>