force-app/main/default/objects/Contract_Product_Services__c/validationRules/Contracted_Price_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contracted_Price_is_Required</fullName>
    <active>true</active>
    <description>Make Contracted Price Required for all but Hub Admin users.</description>
    <errorConditionFormula>AND ( 
ISNULL(Contracted_Price__c),
$Profile.Name &lt;&gt; &quot;Hub Admin Profile&quot;
)</errorConditionFormula>
    <errorDisplayField>Contracted_Price__c</errorDisplayField>
    <errorMessage>Contracted Price is Required</errorMessage>
</ValidationRule>