force-app/main/default/objects/Contract_Product_Services__c/validationRules/Ext_Maintenance_Expiration_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Ext_Maintenance_Expiration_Date</fullName>
    <active>true</active>
    <description>If the Extended Maintenance is yes then the Ext. Maint endDatemust be populated</description>
    <errorConditionFormula>IF( ispickval( Extended_Maintenance__c , &quot;Yes&quot;), ISNULL( Ext_Maint_Exp_Date__c ), False )</errorConditionFormula>
    <errorDisplayField>Ext_Maint_Exp_Date__c</errorDisplayField>
    <errorMessage>Extended Maintenance Expiration Date must be populated for Products that have extended Maintenance</errorMessage>
</ValidationRule>